--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <img src="/images/Tropiclash Logo - Small Transparrent .png" alt="Tropiclash Logo" class="logo-img">
+                    <img src="images/Tropiclash Logo - Small Transparrent .png" alt="Tropiclash Logo" class="logo-img">
                     <span>Tropiclash</span>
                 </div>
                 <div class="menu-icon">
