--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
 
     <!-- Server Status Bar -->
     <section id="hero" class="hero">
+        <div class="hero-logo">
+            <img src="images/Tropiclash Logo.png" alt="Tropiclash Logo" class="hero-banner">
+        </div>
         <div class="hero-content">
-            <h1>Welcome to Tropiclash</h1>
+            <h1>Welcome to Tropiclash!</h1>
             <p>The seas wont explore themselves...</p>
             <div class="hero-buttons">
                 <a href="#getting-started" class="btn btn-primary">Start Your Journey</a>
