fixed image issue and moved logos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <nav>
                 <div class="logo">
-                    <img src="images/Tropiclash Logo - Small Transparrent .png" alt="Tropiclash Logo" class="logo-img">
+                    <img src="images/logos/Tropiclash Logo - Small Transparrent .png" alt="Tropiclash Logo" class="logo-img">
                     <span>Tropiclash</span>
                 </div>
                 <div class="menu-icon">
@@ -38,7 +38,7 @@
 
     <section id="hero" class="hero">
         <div class="hero-logo">
-            <img src="images/Tropiclash Logo.png" alt="Tropiclash Logo" class="hero-banner">
+            <img src="images/logos/Tropiclash Logo.png" alt="Tropiclash Logo" class="hero-banner">
         </div>
         <div class="hero-content">
             <h1>Welcome to Tropiclash!</h1>
@@ -64,7 +64,7 @@
                 <a href="#" class="season-btn">Get Astropass</a>
             </div>
             <div class="season-image">
-                <img src="/images/Tropiclash Logo S1.png" alt="Season Pass Character" style="width: 25rem; height: auto;">
+                <img src="images/logos/Tropiclash Logo S1.png" alt="Season Pass Character" style="width: 25rem; height: auto;">
             </div>
         </div>
     </section>
