--- a/index.html
+++ b/index.html
@@ -89,25 +89,25 @@
             <h2>Frequently Asked Questions</h2>
             <div class="faq-grid">
                 <div class="faq-item">
-                    <h3>How can I apply for staff?</h3>
-                    <p class="faq-answer">You can apply for staff by pressing the "Apply for Staff" button in the Join Our Team section!</p>
-                </div>
-                <div class="faq-item">
-                    <h3>How can I play in Destiny Games?</h3>
-                    <p class="faq-answer">Destiny Games is an invite-only event, however you can apply for testing today!</p>
-                </div>
-                <div class="faq-item">
-                    <h3>Can I get a free ExpHost Server?</h3>
-                    <p class="faq-answer">No, as a company we need to make a profit and we can not do that with people having free servers.</p>
-                </div>
-                <div class="faq-item">
                     <h3>How do I join Tropiclash?</h3>
-                    <p class="faq-answer">Tropiclash will be a public Minecraft Java server on the latest versions of Minecraft, but it is still in development. Stay tuned for updates!</p>
+                    <p class="faq-answer">To join, you’ll need a Minecraft Java Edition account. Once on Minecraft, simply connect to our server using the IP address provided on the website.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>What is the AstroPass?</h3>
+                    <p class="faq-answer">The AstroPass is our seasonal rewards system. By completing challenges, you can unlock exclusive skins, pets, and other in-game items.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>Can I play Tropiclash on Bedrock Edition?</h3>
+                    <p class="faq-answer">Currently, Tropiclash is only available on Minecraft Java Edition. We may explore Bedrock compatibility in the future.</p>
+                </div>
+                <div class="faq-item">
+                    <h3>How do I stay updated on Tropiclash news?</h3>
+                    <p class="faq-answer">Follow us on Discord, Twitter, and other social platforms linked below to get the latest updates, announcements, and sneak peeks.</p>
                    
                 </div>
                 <div class="faq-item">
                   <h3>If I’m being harassed by another player, do I harass them back?</h3>
-                  <p class="faq-answer">Yes. They smell.</p>
+                  <p class="faq-answer">Yes. Obvs🙄</p>
                  
               </div>
             </div>
@@ -127,28 +127,6 @@
       </footer>
 
     <script>
-        // Carousel functionality
-        const carouselContainer = document.querySelector('.carousel-container');
-        const images = document.querySelectorAll('.carousel-image');
-        const prevButton = document.querySelector('.carousel-prev');
-        const nextButton = document.querySelector('.carousel-next');
-
-        let currentIndex = 0;
-
-        function updateCarousel() {
-            carouselContainer.style.transform = `translateX(-${currentIndex * 100}%)`;
-        }
-
-        nextButton.addEventListener('click', () => {
-            currentIndex = (currentIndex + 1) % images.length;
-            updateCarousel();
-        });
-
-        prevButton.addEventListener('click', () => {
-            currentIndex = (currentIndex - 1 + images.length) % images.length;
-            updateCarousel();
-        });
-
         document.addEventListener('DOMContentLoaded', function () {
             const faqItems = document.querySelectorAll('.faq-item');
             faqItems.forEach(item => {
